--- a/packages/block-editor-pro/package.json
+++ b/packages/block-editor-pro/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@uiw/react-codemirror": "^4.21.21",
     "@wordpress/api-fetch": "^6.44.0",
+    "@wordpress/hooks": "^3.51.0",
     "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
