Add upsell prompt to pro component dragging

--- a/packages/block-editor/src/data/block-components.json
+++ b/packages/block-editor/src/data/block-components.json
@@ -14,6 +14,7 @@
 			"allowsChildren": false,
 			"description": "Text based input with options for complex formatting. If no value is input to this field in the editor, it will not be displayed on the front end.",
 			"shortDescription": "Text based input with options for complex formatting.",
+			"pro": false,
 			"attributes": {
 				"allowedFormats": {
 					"type": "array"
@@ -49,6 +50,7 @@
 			"label": "Plain Text",
 			"allowsChildren": false,
 			"shortDescription": "Plain text based input without options for formatting.",
+			"pro": false,
 			"defaultAttributes": {
 				"placeholder": "Enter some text..."
 			}
@@ -58,6 +60,7 @@
 			"label": "Link",
 			"allowsChildren": false,
 			"shortDescription": "Inputs for an embedded link accepting a label, href, and target.",
+			"pro": false,
 			"defaultAttributes": {
 				"placeholder": "Enter a label...",
 				"tagName": "a"
@@ -68,10 +71,18 @@
 			"label": "Image",
 			"allowsChildren": false,
 			"shortDescription": "Upload dialog for all image formats.",
+			"pro": false,
 			"defaultAttributes": {
 				"label": "Image",
 				"tagName": "img"
 			}
+		},
+		{
+			"type": "inner-blocks",
+			"label": "Inner Blocks",
+			"allowsChildren": false,
+			"shortDescription": "Allow inclusion of blocks inside of this block.",
+			"pro": true
 		}
 	],
 	"html": [
