--- a/packages/block-editor/src/data/block-components.json
+++ b/packages/block-editor/src/data/block-components.json
@@ -83,6 +83,13 @@
 			"allowsChildren": false,
 			"shortDescription": "Allow inclusion of blocks inside of this block.",
 			"pro": true
+		},
+		{
+			"type": "boolean",
+			"label": "True / False",
+			"allowsChildren": false,
+			"shortDescription": "Toggle-based input for accepting true and false values.",
+			"pro": true
 		}
 	],
 	"html": [
