Fix classname and style display

--- a/packages/block-editor/src/data/block-components.json
+++ b/packages/block-editor/src/data/block-components.json
@@ -1,10 +1,10 @@
 {
   "attributes": {
     "className": {
-      "type": "object"
+      "type": "string"
     },
     "style": {
-      "type": "object"
+      "type": "string"
     }
   },
   "fields": [
