WIP on attribute handle dragging

--- a/packages/block-editor/src/data/block-components.json
+++ b/packages/block-editor/src/data/block-components.json
@@ -1,10 +1,16 @@
 {
   "attributes": {
+    "attributeName": {
+      "type": "string",
+      "description": ""
+    },
     "className": {
-      "type": "string"
+      "type": "string",
+      "description": "This is a class name."
     },
     "style": {
-      "type": "string"
+      "type": "string",
+      "description": "This is a style property string."
     }
   },
   "fields": [
