--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -21,6 +21,7 @@
     "@wordpress/api-fetch": "^6.44.0",
     "@wordpress/hooks": "^3.51.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.0",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
