--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"test": "jest",
-		"start": "rollup -c -w",
+		"start": "NODE_ENV=development rollup -c -w",
 		"build": "rollup -c",
 		"prepublishOnly": "rm -rf ./dist && npm run build"
 	},
