--- a/packages/block-loader/package.json
+++ b/packages/block-loader/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/main.js",
 	"type": "module",
 	"scripts": {
-		"start": "rollup -c -w",
+		"start": "NODE_ENV=development rollup -c -w",
 		"build": "rollup -c",
 		"prepublishOnly": "rm -rf ./dist && npm run build"
 	},
