--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -22,11 +22,13 @@
 		"@wordpress/hooks": "^3.51.0",
 		"clsx": "^2.1.0",
 		"codemirror": "^6.0.1",
+		"pretty-print-json": "^3.0.0",
 		"react": "^18.2.0",
 		"react-contenteditable": "^3.3.7",
 		"react-dom": "^18.2.0",
 		"react-draggable": "^4.4.6",
 		"react-redux": "^8.1.3",
+		"reselect": "^5.1.0",
 		"rollup-plugin-postcss": "^4.0.2"
 	},
 	"devDependencies": {
