--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -22,6 +22,7 @@
 		"@wordpress/hooks": "^3.51.0",
 		"clsx": "^2.1.0",
 		"codemirror": "^6.0.1",
+		"micro-memoize": "^4.1.2",
 		"pretty-print-json": "^3.0.0",
 		"react": "^18.2.0",
 		"react-contenteditable": "^3.3.7",
