--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -17,6 +17,7 @@
 		"@codemirror/state": "^6.3.3",
 		"@codemirror/view": "^6.22.1",
 		"@reduxjs/toolkit": "^1.9.7",
+		"@svgr/rollup": "^8.1.0",
 		"@uiw/react-codemirror": "^4.21.21",
 		"@wordpress/api-fetch": "^6.44.0",
 		"@wordpress/hooks": "^3.51.0",
