Fix attribute default for string type

--- a/packages/block-editor/src/data/block-components.json
+++ b/packages/block-editor/src/data/block-components.json
@@ -34,7 +34,7 @@
 			"shortDescription": "Text based input with options for complex formatting.",
 			"blockAttribute": {
 				"type": "string",
-				"default": null
+				"default": ""
 			},
 			"attributes": {
 				"allowedFormats": {
