Fix charset for standalone build

--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -9,7 +9,7 @@
 		"start": "NODE_ENV=development rollup -c -w",
 		"build": "rollup -c",
 		"prepublishOnly": "rm -rf ./dist && npm run build",
-		"preview": "NODE_ENV=development rollup --config rollup-preview.config.js -w"
+		"standalone": "NODE_ENV=development rollup --config rollup-standalone.config.js -w"
 	},
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
