--- a/packages/block-editor/package.json
+++ b/packages/block-editor/package.json
@@ -31,8 +31,7 @@
 		"react-dom": "^18.2.0",
 		"react-draggable": "^4.4.6",
 		"react-redux": "^8.1.3",
-		"reselect": "^5.1.0",
-		"rollup-plugin-postcss": "^4.0.2"
+		"reselect": "^5.1.0"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.22.10",
@@ -46,7 +45,6 @@
 		"@testing-library/user-event": "^14.5.2",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.0",
-		"@vitejs/plugin-react": "^3.1.0",
 		"autoprefixer": "^10.4.16",
 		"babel-jest": "^29.7.0",
 		"dotenv": "^16.3.1",
@@ -61,6 +59,7 @@
 		"rollup": "^4.8.0",
 		"rollup-plugin-external-globals": "^0.9.1",
 		"rollup-plugin-livereload": "^2.0.5",
+		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-serve": "^1.1.1"
 	}
 }
