--- a/packages/block-preview/package.json
+++ b/packages/block-preview/package.json
@@ -11,10 +11,12 @@
 		"prepublishOnly": "rm -rf ./dist && npm run build"
 	},
 	"dependencies": {
-		"@wordpress/api-fetch": "^6.44.0",
+		"@wordpress/block-editor": "^12.26.0",
+		"@wordpress/blocks": "^12.35.0",
 		"@wordpress/hooks": "^3.51.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.22.10",
